--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.pythonPath": "flask/bin/python3.7"
+    "python.pythonPath": "flask/bin/python3.7",
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": true
 }
