Make app compatible with ElasticBeanstalk

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,8 @@ dmypy.json
 
 *.env
 now.json
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
